flux-snapshot/2023-04-21-10-04-40-exit101
    Updating crates.io index
    Checking sorting v0.1.0 (/Users/cole/scratch/flux/flux-demos/sorting)
error[E0107]: enum takes 1 generic argument but 2 generic arguments were supplied
   --> src/sort.rs:37:34
    |
37  | pub fn list_next(list: &List) -> Option<i32, &List> {
    |                                  ^^^^^^      ----- help: remove this generic argument
    |                                  |
    |                                  expected 1 generic argument
    |
note: enum defined here, with 1 generic parameter: `T`
   --> /Users/cole/.rustup/toolchains/nightly-2023-04-05-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/option.rs:564:10
    |
564 | pub enum Option<T> {
    |          ^^^^^^ -

For more information about this error, try `rustc --explain E0107`.
error: could not compile `sorting` (bin "sorting") due to previous error
